--- a/index.html
+++ b/index.html
@@ -1,225 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>F1 Cash — Simple Business Funding</title>
-  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
-
-  <!-- Futuristic fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
   <style>
-    :root{
-      --bg-1:#05070d; --bg-2:#0b1220; --panel:#0f1522;
-      --line:#1e2740; --ink:#e6ecff; --muted:#8ea2c9;
-      --accent:#11b1ff; --accent2:#6ee7ff; --glow: rgba(17,177,255,.25);
+    /* ---- GLOBAL RESET ---- */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-
-    /* Base & sticky footer layout */
-    *{box-sizing:border-box;margin:0;padding:0}
-    html,body{height:100%}
-    body{
-      min-height:100vh; display:flex; flex-direction:column;
-      color:var(--ink);
-      font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      line-height:1.6;
-      background:
-        radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
-        linear-gradient(120deg, var(--bg-1), var(--bg-2));
-      overflow-x:hidden;
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top left, #0a0f1c, #04070f 80%);
+      color: #e0e6f0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      justify-content: space-between;
     }
-
-    /* Ambient moving sheen (subtle) */
-    body::before{
-      content:"";
-      position:fixed; inset:-20% -20% -20% -20%;
-      background:
-        radial-gradient(60% 40% at 20% 20%, rgba(17,177,255,.08), transparent 60%),
-        radial-gradient(50% 35% at 80% 10%, rgba(110,231,255,.06), transparent 60%),
-        radial-gradient(60% 45% at 60% 80%, rgba(17,177,255,.05), transparent 70%);
-      animation:floatSheen 26s ease-in-out infinite alternate;
-      pointer-events:none; z-index:-1; filter:saturate(1.1);
+    a {
+      text-decoration: none;
+      color: #1fbfff;
+      transition: color 0.3s ease;
     }
-    @keyframes floatSheen{0%{transform:translate3d(0,0,0) scale(1)}50%{transform:translate3d(-2%,1%,0) scale(1.03)}100%{transform:translate3d(2%,-1%,0) scale(1.02)}}
-
-    .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%}
-
-    /* Header */
-    header{
-      display:flex;align-items:center;gap:16px;
-      padding:10px 0 22px;border-bottom:1px solid var(--line);
-      backdrop-filter:saturate(120%);
+    a:hover {
+      color: #58d6ff;
     }
-
-    /* Logo block with glow + sweep */
-    .logo{display:grid;place-items:center}
-    .fx-logo{
-      position:relative; width:96px; padding:10px; border-radius:20px;
-      background:linear-gradient(145deg,#0e1730,#0a1327);
-      box-shadow:
-        0 18px 36px var(--glow),
-        0 2px 0 rgba(255,255,255,.02) inset,
-        0 0 0 1px rgba(17,177,255,.1);
-      overflow:hidden; isolation:isolate;
+    /* ---- HEADER ---- */
+    header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      padding: 40px 8%;
+      animation: fadeIn 1.4s ease;
     }
-    /* light badge behind logo */
-    .fx-logo .badge{
-      position:absolute; inset:10px; border-radius:14px;
-      background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
-      box-shadow:inset 0 0 1px rgba(255,255,255,.25);
-      z-index:0; filter:blur(.2px);
+    .logo img {
+      width: 90px;
+      height: auto;
+      border-radius: 18px;
+      box-shadow: 0 0 10px rgba(0, 200, 255, 0.15);
+      animation: glowPulse 3s infinite ease-in-out;
     }
-    /* ✨ Critical blend rules */
-    .fx-logo img{
-      position:relative; z-index:1; display:block; width:100%; height:auto;
-      border-radius:14px;                 /* soften any image edges */
-      mix-blend-mode:screen;              /* treats dark pixels as transparent */
-      filter:drop-shadow(0 6px 12px rgba(0,0,0,.45));
+    .logo-text h1 {
+      font-size: 1.8rem;
+      color: #1fbfff;
+      font-weight: 700;
+      letter-spacing: 2px;
     }
-    .fx-logo::before,.fx-logo::after{
-      content:""; position:absolute; inset:-12%;
-      background:linear-gradient(90deg,
-        rgba(17,177,255,0) 0%,
-        rgba(17,177,255,.28) 45%,
-        rgba(110,231,255,.35) 55%,
-        rgba(17,177,255,0) 100%);
-      mix-blend-mode:screen; opacity:.42; border-radius:22px; z-index:2;
+    .logo-text p {
+      color: #9caecf;
+      font-size: 0.95rem;
+      margin-top: 4px;
     }
-    .fx-logo::before{transform:translateX(-120%); animation:logoSweepLeft 5.2s ease-in-out .2s infinite}
-    .fx-logo::after {transform:translateX(120%);  animation:logoSweepRight 5.2s ease-in-out 2.8s infinite}
-    @keyframes logoSweepLeft {0%{transform:translateX(-120%);opacity:0}15%{opacity:.42}50%{transform:translateX(0%)}85%{opacity:.12}100%{transform:translateX(120%);opacity:0}}
-    @keyframes logoSweepRight{0%{transform:translateX(120%);opacity:0}15%{opacity:.42}50%{transform:translateX(0%)}85%{opacity:.12}100%{transform:translateX(-120%);opacity:0}}
-
-    .brand{display:flex;flex-direction:column;gap:3px}
-    .name{
-      font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
-      background:linear-gradient(90deg,var(--accent),var(--accent2));
-      -webkit-background-clip:text;background-clip:text;color:transparent;
-      background-size:220% 100%;
-      animation:shine 4.2s ease-in-out infinite;
-      text-shadow:0 0 18px rgba(17,177,255,.12);
+    /* ---- MAIN CONTENT ---- */
+    main {
+      flex-grow: 1;
+      padding: 20px 8%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 40px;
     }
-    @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-    .tag{color:var(--muted);font-size:13px}
-
-    /* Hero */
-    .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:32px;align-items:center;padding:34px 0 28px 0}
-    .h1{
-      font:800 44px/1.12 'Orbitron',sans-serif;margin:0 0 12px;letter-spacing:.3px;
-      background:linear-gradient(90deg,var(--accent),#7dd3fc);
-      -webkit-background-clip:text;background-clip:text;color:transparent;
-      filter:drop-shadow(0 6px 18px rgba(17,177,255,.12));
-      opacity:0; transform:translateY(8px); animation:reveal .9s ease-out .2s forwards;
+    .content {
+      flex: 1 1 450px;
+      animation: slideInLeft 1.3s ease;
     }
-    @keyframes reveal{to{opacity:1; transform:translateY(0)}}
-    .lead{font-size:18px;color:var(--muted);margin:0 0 18px}
-    ul{margin-left:18px;margin-bottom:24px} ul li{margin-bottom:9px}
-
-    /* Card */
-    .card{
-      border:1px solid var(--line);border-radius:18px;
-      padding:22px;background:linear-gradient(180deg,#0e1322,#0d1220);
-      box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05);
-      transform:translateY(2px); transition:transform .35s ease, box-shadow .35s ease;
+    h2 {
+      color: #35c6ff;
+      font-size: 2.2rem;
+      margin-bottom: 20px;
+      line-height: 1.3;
+      text-shadow: 0 0 8px rgba(53, 198, 255, 0.3);
     }
-    .card:hover{transform:translateY(0); box-shadow:0 28px 60px rgba(17,177,255,.14),inset 0 0 1px rgba(255,255,255,.06)}
-    .card strong{display:block;margin-bottom:10px}
-    .divider{height:1px;background:var(--line);margin:14px 0}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px 18px}
-    .label{color:var(--muted);font-size:13px}.value{font-weight:700}
-
-    /* CTA */
-    .cta{
-      background:linear-gradient(90deg,var(--accent),var(--accent2));
-      border:none;border-radius:14px;padding:14px 28px;color:#001320;font-weight:800;
-      cursor:not-allowed;opacity:.78;
-      box-shadow:0 12px 28px rgba(17,177,255,.28), 0 0 0 1px rgba(255,255,255,.06) inset;
-      font-family:'Orbitron',sans-serif;letter-spacing:.7px;
-      transform:translateY(0); transition:transform .25s ease, box-shadow .25s ease;
+    p {
+      color: #b6c3da;
+      line-height: 1.6;
+      margin-bottom: 25px;
+      font-size: 1.05rem;
     }
-    .cta:hover{transform:translateY(-1px); box-shadow:0 16px 34px rgba(17,177,255,.32), 0 0 0 1px rgba(255,255,255,.07) inset}
-    .note{font-size:12px;color:var(--muted);margin-top:8px}
-
-    /* Footer */
-    footer{
-      display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;
-      border-top:1px solid var(--line);
-      padding:18px; font-size:14px; color:var(--muted)
+    ul {
+      list-style: disc;
+      margin-left: 20px;
+      margin-bottom: 25px;
     }
-    footer a{color:var(--ink); position:relative}
-    footer a::after{
-      content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
-      background:linear-gradient(90deg,transparent,var(--accent),transparent);
-      transform:scaleX(0); transform-origin:center; transition:transform .3s ease;
+    li {
+      margin-bottom: 8px;
     }
-    footer a:hover::after{ transform:scaleX(1) }
-
-    /* Responsive */
-    @media (max-width:960px){
-      .wrap{padding:24px 16px}
-      .hero{grid-template-columns:1fr}
-      .h1{font-size:36px}
-      .fx-logo{width:84px}
+    .apply-btn {
+      display: inline-block;
+      background: linear-gradient(90deg, #00b7ff, #007aff);
+      color: white;
+      padding: 14px 35px;
+      border-radius: 12px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      box-shadow: 0 0 15px rgba(0, 150, 255, 0.3);
+      cursor: not-allowed;
+      opacity: 0.7;
     }
-    @media (max-width:520px){
-      .h1{font-size:30px}
-      .grid{grid-template-columns:1fr}
+    .note {
+      font-size: 0.9rem;
+      margin-top: 8px;
+      color: #7e8fa8;
     }
-
-    /* Accessibility: reduced motion */
-    @media (prefers-reduced-motion: reduce){
-      body::before, .fx-logo::before, .fx-logo::after, .name, .h1 { animation:none }
+    /* ---- TERMS CARD ---- */
+    .terms {
+      flex: 1 1 320px;
+      background: rgba(14, 20, 30, 0.8);
+      border: 1px solid rgba(40, 120, 180, 0.25);
+      border-radius: 16px;
+      padding: 25px 30px;
+      box-shadow: 0 0 25px rgba(0, 180, 255, 0.1);
+      animation: slideInRight 1.3s ease;
+    }
+    .terms h3 {
+      color: #a8dfff;
+      font-size: 1.2rem;
+      margin-bottom: 15px;
+      border-bottom: 1px solid rgba(53, 198, 255, 0.15);
+      padding-bottom: 8px;
+    }
+    .terms p {
+      margin: 10px 0;
+      font-size: 0.95rem;
+    }
+    .terms strong {
+      color: #ffffff;
+    }
+    /* ---- FOOTER ---- */
+    footer {
+      text-align: center;
+      padding: 25px;
+      border-top: 1px solid rgba(255, 255, 255, 0.05);
+      background: rgba(0, 10, 20, 0.3);
+      font-size: 0.9rem;
+      color: #8fa7c6;
+    }
+    footer a {
+      color: #3fc3ff;
+    }
+    /* ---- ANIMATIONS ---- */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes slideInLeft {
+      from { opacity: 0; transform: translateX(-40px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+    @keyframes slideInRight {
+      from { opacity: 0; transform: translateX(40px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+    @keyframes glowPulse {
+      0%, 100% { box-shadow: 0 0 10px rgba(0, 200, 255, 0.1); }
+      50% { box-shadow: 0 0 20px rgba(0, 200, 255, 0.4); }
+    }
+    /* ---- RESPONSIVE ---- */
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+      }
+      h2 {
+        font-size: 1.8rem;
+      }
+      .apply-btn {
+        width: 100%;
+        text-align: center;
+      }
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <!-- Header -->
-    <header>
-      <div class="logo fx-logo" aria-hidden="true">
-        <span class="badge" aria-hidden="true"></span>
-        <img src="assets/logo.png" alt="F1 Cash logo">
-      </div>
-      <div class="brand">
-        <div class="name">F1 CASH</div>
-        <div class="tag">Simple Business Funding</div>
-      </div>
-    </header>
-
-    <!-- Hero -->
-    <section class="hero">
-      <div>
-        <h1 class="h1">Fast working capital for small businesses</h1>
-        <p class="lead">Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
-        <ul>
-          <li>Business owners with 12 + months in operation</li>
-          <li>Simple promissory note after verification</li>
-          <li>6 equal monthly installments</li>
-        </ul>
-        <button class="cta" disabled title="Coming soon">APPLY NOW</button>
-        <div class="note">Button disabled for now — application link coming soon.</div>
-      </div>
-
-      <aside class="card" role="complementary" aria-label="At-a-glance terms">
-        <strong>At-a-glance terms</strong>
-        <div class="divider"></div>
-        <div class="grid">
-          <div class="label">Typical advance</div><div class="value">$300 – $1,000</div>
-          <div class="label">Schedule</div><div class="value">6 monthly payments</div>
-          <div class="label">Support</div><div class="value">info@f1cash.net</div>
-          <div class="label">Phone</div><div class="value">+1 229-448-4389</div>
-        </div>
-      </aside>
-    </section>
-  </div>
-
-  <!-- Footer (sticky) -->
+  <header>
+    <div class="logo">
+      <img src="assets/logo.png" alt="F1 Cash Logo">
+    </div>
+    <div class="logo-text">
+      <h1>F1 CASH</h1>
+      <p>Simple Business Funding</p>
+    </div>
+  </header>
+  <main>
+    <div class="content">
+      <h2>Fast working capital for small businesses</h2>
+      <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+      <ul>
+        <li>Business owners with 12+ months in operation</li>
+        <li>Simple promissory note after verification</li>
+        <li>6 equal monthly installments</li>
+      </ul>
+      <a class="apply-btn">APPLY NOW</a>
+      <p class="note">Button disabled for now — application link coming soon.</p>
+    </div>
+    <div class="terms">
+      <h3>At-a-glance terms</h3>
+      <p><strong>Typical advance:</strong> $300 – $1,000</p>
+      <p><strong>Schedule:</strong> 6 monthly payments</p>
+      <p><strong>Support:</strong> info@f1cash.net</p>
+      <p><strong>Phone:</strong> +1 229-448-4389</p>
+    </div>
+  </main>
   <footer>
-    <div>✉️ <a href="mailto:info@f1cash.net">info@f1cash.net</a> · ☎️ <a href="tel:+12294484389">+1 229-448-4389</a></div>
-    <div>© 2025 F1 Cash · All rights reserved.</div>
+    <p>:e-mail: <a href="mailto:info@f1cash.net">info@f1cash.net</a> · :telephone_receiver: <a href="tel:+12294484389">+1 229-448-4389</a></p>
+    <p>© 2025 F1 Cash · All rights reserved.</p>
   </footer>
 </body>
 </html>
