--- a/index.html
+++ b/index.html
@@ -1,216 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>F1 Cash — Simple Business Funding</title>
+  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
+  <!-- Futuristic fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    /* ---- GLOBAL RESET ---- */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    /* ---------- THEME ---------- */
+    :root{
+      --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640;
+      --ink:#e6ecff; --muted:#92a0c5;
+      --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
     }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at top left, #0a0f1c, #04070f 80%);
-      color: #e0e6f0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: space-between;
+    /* ---------- RESET / QUALITY ---------- */
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      min-height:100vh; display:flex; flex-direction:column;
+      color:var(--ink);
+      background:
+        radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
+        linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      overflow-x:hidden;
+      /* text quality */
+      font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      text-rendering:optimizeLegibility;
     }
-    a {
-      text-decoration: none;
-      color: #1fbfff;
-      transition: color 0.3s ease;
+    /* subtle animated ambience */
+    body::before{
+      content:""; position:fixed; inset:-20% -20% -20% -20%; pointer-events:none; z-index:-1;
+      background:
+        radial-gradient(60% 40% at 20% 20%, rgba(17,177,255,.08), transparent 60%),
+        radial-gradient(50% 35% at 80% 10%, rgba(110,231,255,.06), transparent 60%),
+        radial-gradient(60% 45% at 60% 80%, rgba(17,177,255,.05), transparent 70%);
+      animation:floatSheen 26s ease-in-out infinite alternate;
+      filter:saturate(1.05);
     }
-    a:hover {
-      color: #58d6ff;
+    @keyframes floatSheen{
+      0%{transform:translate3d(0,0,0) scale(1)}
+      50%{transform:translate3d(-2%,1%,0) scale(1.02)}
+      100%{transform:translate3d(2%,-1%,0) scale(1.02)}
     }
-    /* ---- HEADER ---- */
-    header {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      padding: 40px 8%;
-      animation: fadeIn 1.4s ease;
+    /* ---------- SPLASH (logo only) ---------- */
+    .splash{
+      position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
+      background:
+        radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
+        linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      transition:opacity .6s ease, visibility .6s ease;
     }
-    .logo img {
-      width: 90px;
-      height: auto;
-      border-radius: 18px;
-      box-shadow: 0 0 10px rgba(0, 200, 255, 0.15);
-      animation: glowPulse 3s infinite ease-in-out;
+    .splash__logo{
+      width:128px; height:auto; border-radius:22px;
+      box-shadow:0 16px 36px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
+      animation:logoPulse 1.2s ease-in-out infinite;
     }
-    .logo-text h1 {
-      font-size: 1.8rem;
-      color: #1fbfff;
-      font-weight: 700;
-      letter-spacing: 2px;
+    @keyframes logoPulse{
+      0%,100%{transform:translateY(0) scale(1); filter:drop-shadow(0 6px 12px rgba(0,0,0,.35))}
+      50%{transform:translateY(-2px) scale(1.02); filter:drop-shadow(0 10px 18px rgba(0,0,0,.45))}
     }
-    .logo-text p {
-      color: #9caecf;
-      font-size: 0.95rem;
-      margin-top: 4px;
+    .splash.is-hidden{opacity:0; visibility:hidden}
+    @media (prefers-reduced-motion: reduce){
+      .splash__logo{animation:none}
+      .splash{transition:none}
     }
-    /* ---- MAIN CONTENT ---- */
-    main {
-      flex-grow: 1;
-      padding: 20px 8%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 40px;
+    /* ---------- LAYOUT ---------- */
+    .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%;opacity:0;transform:translateY(8px);transition:opacity .6s ease, transform .6s ease}
+    .app-ready .wrap{opacity:1;transform:none}
+    header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
+    /* Logo block */
+    .logo img{
+      width:94px;height:auto;border-radius:18px;
+      box-shadow:0 10px 24px rgba(17,177,255,.22); /* soft single glow */
     }
-    .content {
-      flex: 1 1 450px;
-      animation: slideInLeft 1.3s ease;
+    .logo-text h1{
+      font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
+      background:linear-gradient(90deg,var(--accent),var(--accent2));
+      -webkit-background-clip:text;background-clip:text;color:transparent;
+      background-size:220% 100%; animation:shine 4.2s ease-in-out infinite;
+      text-shadow:0 0 18px rgba(17,177,255,.10);
     }
-    h2 {
-      color: #35c6ff;
-      font-size: 2.2rem;
-      margin-bottom: 20px;
-      line-height: 1.3;
-      text-shadow: 0 0 8px rgba(53, 198, 255, 0.3);
+    @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    .logo-text p{color:var(--muted);font-size:13px}
+    main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
+    .content{flex:1 1 460px}
+    h2{
+      font-family:'Orbitron',sans-serif; font-weight:800; font-size:44px; line-height:1.12;
+      margin:0 0 12px; letter-spacing:.3px;
+      background:linear-gradient(90deg,var(--accent),#7dd3fc);
+      -webkit-background-clip:text;background-clip:text;color:transparent;
+      filter:drop-shadow(0 6px 18px rgba(17,177,255,.12));
     }
-    p {
-      color: #b6c3da;
-      line-height: 1.6;
-      margin-bottom: 25px;
-      font-size: 1.05rem;
+    p{color:#b6c3da;line-height:1.6;margin-bottom:22px;font-size:1.05rem}
+    ul{list-style:disc;margin-left:20px;margin-bottom:22px}
+    li{margin-bottom:8px}
+    .apply-btn{
+      display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;
+      padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;
+      box-shadow:0 10px 26px rgba(17,177,255,.28);
+      cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif;
     }
-    ul {
-      list-style: disc;
-      margin-left: 20px;
-      margin-bottom: 25px;
+    .note{font-size:12.5px;color:var(--muted);margin-top:8px}
+    /* Terms card */
+    .card{
+      flex:1 1 330px;background:linear-gradient(180deg,#0e1322,#0d1220);
+      border:1px solid var(--line);border-radius:18px;padding:22px;
+      box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05);
     }
-    li {
-      margin-bottom: 8px;
+    .card h3{color:#a8dfff;font-size:1.15rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
+    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
+    .label{color:var(--muted);font-size:13px}
+    .value{font-weight:700}
+    /* Icons (inline SVG sizing) */
+    .icon{width:16px;height:16px;display:inline-block;vertical-align:-2px}
+    .icon svg{width:16px;height:16px;display:block}
+    /* ---------- FOOTER (premium) ---------- */
+    footer{
+      position:relative; z-index:1;
+      display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
+      padding:18px 18px;
+      background:rgba(0,10,20,.28);
+      backdrop-filter:saturate(120%) blur(2px);
+      color:var(--muted); font-size:14px;
     }
-    .apply-btn {
-      display: inline-block;
-      background: linear-gradient(90deg, #00b7ff, #007aff);
-      color: white;
-      padding: 14px 35px;
-      border-radius: 12px;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      box-shadow: 0 0 15px rgba(0, 150, 255, 0.3);
-      cursor: not-allowed;
-      opacity: 0.7;
+    footer::before{
+      content:""; position:absolute; left:0; right:0; top:0; height:1px;
+      background:linear-gradient(90deg,transparent,var(--accent),transparent);
+      opacity:.65;
     }
-    .note {
-      font-size: 0.9rem;
-      margin-top: 8px;
-      color: #7e8fa8;
+    footer a{color:var(--ink); position:relative}
+    footer a::after{
+      content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
+      background:linear-gradient(90deg,transparent,var(--accent),transparent);
+      transform:scaleX(0); transform-origin:center; transition:transform .3s ease;
     }
-    /* ---- TERMS CARD ---- */
-    .terms {
-      flex: 1 1 320px;
-      background: rgba(14, 20, 30, 0.8);
-      border: 1px solid rgba(40, 120, 180, 0.25);
-      border-radius: 16px;
-      padding: 25px 30px;
-      box-shadow: 0 0 25px rgba(0, 180, 255, 0.1);
-      animation: slideInRight 1.3s ease;
+    footer a:hover::after{transform:scaleX(1)}
+    /* ---------- RESPONSIVE ---------- */
+    @media (max-width:960px){
+      .wrap{padding:24px 16px}
+      main{flex-direction:column}
+      h2{font-size:36px}
+      .logo img{width:86px}
     }
-    .terms h3 {
-      color: #a8dfff;
-      font-size: 1.2rem;
-      margin-bottom: 15px;
-      border-bottom: 1px solid rgba(53, 198, 255, 0.15);
-      padding-bottom: 8px;
-    }
-    .terms p {
-      margin: 10px 0;
-      font-size: 0.95rem;
-    }
-    .terms strong {
-      color: #ffffff;
-    }
-    /* ---- FOOTER ---- */
-    footer {
-      text-align: center;
-      padding: 25px;
-      border-top: 1px solid rgba(255, 255, 255, 0.05);
-      background: rgba(0, 10, 20, 0.3);
-      font-size: 0.9rem;
-      color: #8fa7c6;
-    }
-    footer a {
-      color: #3fc3ff;
-    }
-    /* ---- ANIMATIONS ---- */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @keyframes slideInLeft {
-      from { opacity: 0; transform: translateX(-40px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-    @keyframes slideInRight {
-      from { opacity: 0; transform: translateX(40px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-    @keyframes glowPulse {
-      0%, 100% { box-shadow: 0 0 10px rgba(0, 200, 255, 0.1); }
-      50% { box-shadow: 0 0 20px rgba(0, 200, 255, 0.4); }
-    }
-    /* ---- RESPONSIVE ---- */
-    @media (max-width: 768px) {
-      main {
-        flex-direction: column;
-      }
-      h2 {
-        font-size: 1.8rem;
-      }
-      .apply-btn {
-        width: 100%;
-        text-align: center;
-      }
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
+    @media (max-width:520px){
+      h2{font-size:30px}
+      .card{padding:18px}
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="assets/logo.png" alt="F1 Cash Logo">
-    </div>
-    <div class="logo-text">
-      <h1>F1 CASH</h1>
-      <p>Simple Business Funding</p>
-    </div>
-  </header>
-  <main>
-    <div class="content">
-      <h2>Fast working capital for small businesses</h2>
-      <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
-      <ul>
-        <li>Business owners with 12+ months in operation</li>
-        <li>Simple promissory note after verification</li>
-        <li>6 equal monthly installments</li>
-      </ul>
-      <a class="apply-btn">APPLY NOW</a>
-      <p class="note">Button disabled for now — application link coming soon.</p>
-    </div>
-    <div class="terms">
-      <h3>At-a-glance terms</h3>
-      <p><strong>Typical advance:</strong> $300 – $1,000</p>
-      <p><strong>Schedule:</strong> 6 monthly payments</p>
-      <p><strong>Support:</strong> info@f1cash.net</p>
-      <p><strong>Phone:</strong> +1 229-448-4389</p>
-    </div>
-  </main>
+  <!-- Splash: only the logo on load -->
+  <div class="splash" id="splash" aria-hidden="true">
+    <img class="splash__logo" src="assets/logo.png" alt="">
+  </div>
+  <!-- Main content -->
+  <div class="wrap" id="app">
+    <header>
+      <div class="logo"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
+      <div class="logo-text">
+        <h1>F1 CASH</h1>
+        <p>Simple Business Funding</p>
+      </div>
+    </header>
+    <main>
+      <div class="content">
+        <h2>Fast working capital for small businesses</h2>
+        <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+        <ul>
+          <li>Business owners with 12+ months in operation</li>
+          <li>Simple promissory note after verification</li>
+          <li>6 equal monthly installments</li>
+        </ul>
+        <a class="apply-btn" title="Coming soon">APPLY NOW</a>
+        <p class="note">Button disabled for now — application link coming soon.</p>
+      </div>
+      <aside class="card" aria-label="At-a-glance terms">
+        <h3>At-a-glance terms</h3>
+        <div class="row">
+          <span class="label">Typical advance</span>
+          <span class="value">$300 – $1,000</span>
+        </div>
+        <div class="row">
+          <span class="label">Schedule</span>
+          <span class="value">6 monthly payments</span>
+        </div>
+        <div class="row">
+          <span class="label">
+            <span class="icon" aria-hidden="true">
+              <!-- Mail icon -->
+              <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+            </span> Support
+          </span>
+          <span class="value"><a href="mailto:info@f1cash.net">info@f1cash.net</a></span>
+        </div>
+        <div class="row">
+          <span class="label">
+            <span class="icon" aria-hidden="true">
+              <!-- Phone icon -->
+              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+            </span> Phone
+          </span>
+          <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
+        </div>
+      </aside>
+    </main>
+  </div>
+  <!-- Footer (sticky, premium) -->
   <footer>
-    <p>:e-mail: <a href="mailto:info@f1cash.net">info@f1cash.net</a> · :telephone_receiver: <a href="tel:+12294484389">+1 229-448-4389</a></p>
-    <p>© 2025 F1 Cash · All rights reserved.</p>
+    <div>
+      <span class="icon" aria-hidden="true">
+        <!-- Mail icon -->
+        <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+      </span>
+      &nbsp;<a href="mailto:info@f1cash.net">info@f1cash.net</a>
+      &nbsp;&nbsp;·&nbsp;&nbsp;
+      <span class="icon" aria-hidden="true">
+        <!-- Phone icon -->
+        <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+      </span>
+      &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
+    </div>
+    <div>© 2025 F1 Cash · All rights reserved.</div>
   </footer>
+  <!-- Tiny splash controller -->
+  <script>
+    (function(){
+      var splash = document.getElementById('splash');
+      var reduce = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+      function reveal(){
+        document.body.classList.add('app-ready');
+        if(splash) splash.classList.add('is-hidden');
+      }
+      reduce ? reveal() : setTimeout(reveal, 1000);
+    })();
+  </script>
 </body>
 </html>
+
+
+
+
+
+
